# canbus-sensor-board

./: .gitignore  Cargo.toml  README.md  canbus-sensor-board-rerouted.kicad_pcb  canbus-sensor-board-rerouted.kicad_pro  canbus-sensor-board.ioc  canbus-sensor-board.kicad_pcb  canbus-sensor-board.kicad_pro  canbus-sensor-board.kicad_sch  memory.x  rust-toolchain.toml
.cargo/: config.toml
production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: config.rs  core.rs  leds.rs  main.rs  protocol.rs  sensors.rs  status.rs
