[package]
name = "canbus-sensor-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as5600 = { version = "0.8.0", features = ["async"] }
bitflags = "2.5.0"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
crc = "3.2.1"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
heapless = { version = "0.8.0", default-features = false }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
static_cell = "2.1.0"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
opt-level = 3
lto = true
codegen-units = 1
